--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudstack12.github.io/peaceofmind4wellness-2/">https://cloudstack12.github.io/peaceofmind4wellness-2/</a><br>
+                <a target="_bLank" href="https://cute-creponne-48c92d.netlify.app/">https://cute-creponne-48c92d.netlify.app/</a><br>
+                <a target="_bLank" href="https://peaceofmind4wellness-2.s3.ap-northeast-1.amazonaws.com/peaceofmind4wellness-2/index.html">https://peaceofmind4wellness-2.s3.ap-northeast-1.amazonaws.com/peaceofmind4wellness-2/index.html</a><br>
             </section>
 
         </div>
